--- a/index.html
+++ b/index.html
@@ -14,8 +14,68 @@
     <body>
         <header>
             <a href="#" class="logo">
-                <img src="images/54430.jpg" />
+                <img
+                    src="images-coffee/java-151343_640.png"
+                    alt="coffee-logo"
+                    width="150px"
+                />
             </a>
+            <nav class="navbar">
+                <a href="#home">Home</a>
+                <a href="#about">About</a>
+                <a href="menu">Menu</a>
+                <a href="#products">Products</a>
+                <a href="#reviews">Reviews</a>
+                <a href="#contact">Contact</a>
+            </nav>
+            <div class="icons">
+                <div class="fas fa-search" id="search-btn"></div>
+                <div class="fas fa-shopping-cart" id="cart-btn"></div>
+                <div class="fas fa-bars" id="menu-btn"></div>
+            </div>
+            <div class="search-form">
+                <input
+                    type="search"
+                    id="search-box"
+                    placeholder="search here....."
+                />
+                <label for="search-box" class="fas fa-search"></label>
+            </div>
+            <div class="cart-items-container">
+                <div class="cart-item">
+                    <span class="fas fa-times"></span>
+                    <img
+                        src="images-coffee/coffee-66850_640.jpg"
+                        width="175px"
+                    />
+                    <div class="content">
+                        <h3>cart item 01</h3>
+                        <div class="price">$12.99</div>
+                    </div>
+                </div>
+                <div class="cart-item">
+                    <span class="fas fa-times"></span>
+                    <img
+                        src="images-coffee/coffee-1341259_640.jpg"
+                        width="200px"
+                    />
+                    <div class="content">
+                        <h3>cart item 02</h3>
+                        <div class="price">$14.99</div>
+                    </div>
+                </div>
+                <div class="cart-item">
+                    <span class="fas fa-times"></span>
+                    <img
+                        src="images-coffee/coffee-8066888_640.jpg"
+                        width="200px"
+                    />
+                    <div class="content">
+                        <h3>cart item 03</h3>
+                        <div class="price">$15.99</div>
+                    </div>
+                </div>
+            </div>
         </header>
     </body>
 </html>
